[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pydatacheck"
version = "0.0.8"
requires-python = ">=3.12"
authors = [
	{ name = "Mark Veltzer", email = "mark.veltzer@gmail.com" }
]
maintainers = [
	{ name = "Mark Veltzer", email = "mark.veltzer@gmail.com" }
]
description = "Pydatacheck checks yaml data files"
readme = "README.md"
license = "MIT"
keywords=[
    "yaml",
    "imdb",
    "simania",
    "goodreads",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "pytconf",
    "cinemagoer",
    "beautifulsoup4",
]

[project.urls]
"Homepage" = "https://github.com/veltzer/pydatacheck"
"Bug Tracker" = "https://github.com/veltzer/pydatacheck/issues"
"Documentation" = "https://veltzer.github.io/pydatacheck"
"Download" = "https://pypi.org/project/pydatacheck/"
"Repository" = "https://github.com/veltzer/pydatacheck"

[project.scripts]
pydatacheck = "pydatacheck.main:main"

[tool.ruff]
line-length = 130

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/pydatacheck"]

[tool.hatch.build.targets.sdist]
include = [
    "src/pydatacheck/",
    "README.md",
    "LICENSE",
    "pyproject.toml"
]
exclude = [
    ".gitignore",
    ".github/",
    "tests/",
    "docs/",
    "config/",
    "*.md",
]
